--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
   - pip install .
   - pip install coveralls
 # command to run tests
-script: coverage run --source=flask_ldap3_login tests
+script: coverage run --source=flask_ldap3_login tests/__main__.py
 
 after_success: coveralls
