--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
   - pip install coveralls
   - pip install mock
 # command to run tests
-script: coverage run tests/__main__.py
+script: coverage run --source=flask_ldap3_login/__init__.py,flask_ldap3_login/forms.py tests/__main__.py
 
 after_success: coveralls
