--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  - "3.6"
   - "pypy"
 
 install:
@@ -25,3 +26,4 @@ deploy:
   password: "$PYPI_PASSWORD"
   on: 
     tags: true
+    python: 3.6
