--- a/.github/auto-comment.yml
+++ b/.github/auto-comment.yml
@@ -1,6 +1,6 @@
 # Comment to a new issue.
 issuesOpened: >
-  Thank you for raising a issue.
+  Thank you for raising an issue.
 
 
   Unfortunately I have made the difficult decision that I will no longer be actively maintaining this repo.  I have
