Configure coverage.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
 [metadata]
 description-file = README.rst
+
+[coverage:run]
+source = flask_ldap3_login
+branch = true
+
+[coverage:paths]
+source =
+    .
+    .tox/*/site-packages
