Run tests on Python 3.8

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,pypy3,lint,docs,coverage-combine
+envlist = py35,py36,py37,py38,pypy3,lint,docs,coverage-combine
 
 [testenv]
 deps =
@@ -27,7 +27,7 @@ commands =
 basepython = python3.7
 skip_install = true
 deps = coverage
-depends = py35,py36,py37,pypy3
+depends = py35,py36,py37,py38,pypy3
 parallel_show_output = true
 commands =
     coverage combine
