Add Black to linting step.

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands =
 basepython = python3.7
 skip_install = true
 deps =
-    flake8
+    flake8-black
 commands =
     flake8 flask_ldap3_login flask_ldap3_login_tests *.py
 
