Added isort to flake8.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
 envlist = py35,py36,py37,py38,pypy3,lint,docs,coverage-combine
 
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+
 [testenv]
 deps =
     coverage
@@ -12,7 +19,7 @@ commands =
 basepython = python3.7
 skip_install = true
 deps =
-    flake8-black
+    -r requirements-dev.txt
 commands =
     flake8 flask_ldap3_login flask_ldap3_login_tests *.py
 
