Added lint step.

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ skip_install = true
 deps =
     -r requirements-dev.txt
 commands =
-    flake8 flask_ldap3_login flask_ldap3_login_tests *.py
+    flake8 flask_ldap3_login flask_ldap3_login_tests setup.py ldap_app.py ldap_app_tls.py
 
 [testenv:docs]
 basepython = python3.7
