--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
+os: linux
+dist: focal
 language: python
-python:
-  - "pypy3"
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "3.8"
+jobs:
+  include:
+    - python: pypy3
+      env: TOXENV=pypy3
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.7
+      env: TOXENV=py37
+    - python: 3.8
+      env: TOXENV=py38
+    - python: 3.7
+      env: TOXENV=lint
 
 install: pip install tox-travis
 
@@ -17,8 +27,7 @@ before_deploy:
 
 deploy:
   provider: pypi
-  skip_cleanup: true
-  user: nickw444-deploy
+  username: nickw444-deploy
   password: "$PYPI_PASSWORD"
   on:
     tags: true
