--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
       env: TOXENV=py38
     - python: 3.7
       env: TOXENV=lint
+    - python: 3.8
+      env: TOXENV=docs
 
 install: pip install tox-travis
 
