--- a/tox.ini
+++ b/tox.ini
@@ -24,11 +24,11 @@ commands =
     flake8 flask_ldap3_login flask_ldap3_login_tests setup.py ldap_app.py ldap_app_tls.py
 
 [testenv:docs]
-basepython = python3.7
+basepython = python3.8
 deps =
     -r requirements-docs.txt
 commands =
-    make -C docs html
+    make -C docs dummy
 
 [testenv:coverage-combine]
 basepython = python3.7
