Make tox fail if sphinx is giving a warning.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ basepython = python3.8
 deps =
     -r requirements-docs.txt
 commands =
-    make -C docs dummy
+    make -C docs dummy SPHINXOPTS="-W --keep-going"
 
 [testenv:coverage-combine]
 basepython = python3.7
