--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
     coverage run --parallel setup.py test
 
 [testenv:lint]
-basepython = python3.7
+basepython = python
 skip_install = true
 deps =
     -r requirements-dev.txt
