--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
     make -C docs dummy SPHINXOPTS="-W --keep-going"
 
 [testenv:coverage-combine]
-basepython = python3.7
+basepython = python
 skip_install = true
 deps = coverage
 depends = py35,py36,py37,py38,pypy3
