--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,pypy3,lint,docs,coverage-combine
+envlist = py35,py36,py37,py38,pypy3,lint,docs
 
 [isort]
 multi_line_output=3
@@ -10,10 +10,11 @@ line_length=88
 
 [testenv]
 deps =
-    codecov
+    coverage
     mock
 commands =
     coverage run --parallel setup.py test
+    coverage xml
 
 [testenv:lint]
 basepython = python
@@ -28,13 +29,3 @@ deps =
     -r requirements-docs.txt
 commands =
     make -C docs dummy SPHINXOPTS="-W --keep-going"
-
-[testenv:coverage-combine]
-basepython = python
-skip_install = true
-deps = coverage
-depends = py35,py36,py37,py38,pypy3
-parallel_show_output = true
-commands =
-    coverage combine
-    coverage report
