--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     coverage
     mock
 commands =
-    coverage run --parallel setup.py test
+    coverage run setup.py test
     coverage xml
 
 [testenv:lint]
