--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,7 @@ deps =
     coverage
     mock
 commands =
-    coverage run setup.py test
-    coverage xml
+    coverage run --source flask_ldap3_login setup.py test
 
 [testenv:lint]
 basepython = python
