--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,8 @@ deps =
     coverage
     mock
 commands =
-    coverage run --source flask_ldap3_login setup.py test
+    coverage run setup.py test
+    coverage xml
 
 [testenv:lint]
 basepython = python
