--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 description-file = README.rst
+version = attr: flask_ldap3_login.__version__
 
 [coverage:run]
 source = flask_ldap3_login
