--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,14 +92,14 @@ jobs:
           pip install twine wheel
         displayName: 'Install Release Dependencies'
       - script: |
+          git describe --exact-match > VERSION
           python setup.py sdist bdist_wheel
         displayName: 'Build Release'
       - task: TwineAuthenticate@1
         inputs:
           pythonUploadServiceConnection: 'flask-ldap3-login'
       - script: |
-          git describe --exact-match > VERSION
-          python -m twine upload -r 'flask-ldap3-login' --config-file $(PYPIRC_PATH) $(System.ArtifactsDirectory)/dist/*.whl
+          python -m twine upload -r 'flask-ldap3-login' --config-file $(PYPIRC_PATH) dist/*.{whl,tar.gz}
         displayName: "Release to PyPi"
       - task: GitHubRelease@1
         inputs:
