--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -45,6 +45,20 @@ jobs:
     strategy:
       matrix:
         python-version: [pypy3, 3.5, 3.6, 3.7, 3.8, 3.9]
+        include:
+          - python-version: pypy3
+            toxenv: pypy3
+          - python-version: 3.5
+            toxenv: py35
+          - python-version: 3.6
+            toxenv: py36
+          - python-version: 3.7
+            toxenv: py37
+          - python-version: 3.8
+            toxenv: py38
+          - python-version: 3.9
+            toxenv: py39
+
     steps:
       - uses: actions/checkout@v2
       - uses: "actions/setup-python@v2"
@@ -64,7 +78,6 @@ jobs:
 
   release:
     name: "Release"
-    runs-on: ubuntu-latest
     needs:
       - test
       - docs
