--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: "actions/setup-python@v2"
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
       - name: 'Install Dependencies'
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: "actions/setup-python@v2"
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
       - name: 'Install Dependencies'
@@ -61,7 +61,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: "actions/setup-python@v2"
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
       - name: 'Install Dependencies'
@@ -78,6 +78,7 @@ jobs:
 
   release:
     name: "Release"
+    runs-on: ubuntu-latest
     needs:
       - test
       - docs
@@ -85,7 +86,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
-      - uses: "actions/setup-python@v2"
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
       - name: 'Install Dependencies'
