--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -74,7 +74,7 @@ jobs:
         env:
           TOXENV: ${{ matrix.toxenv }}
       - uses: codecov/codecov-action@v2
-        if: ${{ matrix.python-version }} == '3.9'
+        if: ${{ matrix.python-version == '3.9' }}
 
   release:
     name: "Release"
