--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -75,9 +75,20 @@ jobs:
           TOXENV: ${{ matrix.toxenv }}
       - uses: codecov/codecov-action@v2
         if: ${{ matrix.python-version == '3.9' }}
+      - name: "Build Package 📦"
+        run: |
+          git describe --tags --exact-match > VERSION
+          python setup.py sdist bdist_wheel
+      - uses: actions/upload-artifact@v2
+        # Only publish artifacts from Python latest build.
+        if: ${{ matrix.python-version == '3.9' }}
+        with:
+          name: dist
+          path: dist/
+          if-no-files-found: error
 
   release:
-    name: "Release"
+    name: "Release 🚀"
     runs-on: ubuntu-latest
     needs:
       - test
@@ -85,20 +96,10 @@ jobs:
       - lint
     if: startsWith(github.ref, 'refs/tags')
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/download-artifact@v2
         with:
-          python-version: "3.x"
-      - name: 'Install Dependencies'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build twine wheel
-
-      - name: 'Build Release'
-        run: |
-          set -e
-          git describe --exact-match > VERSION
-          python setup.py sdist bdist_wheel
+          name: dist
+          path: dist/
       - name: Release to PyPi 📦
         uses: pypa/gh-action-pypi-publish@master
         with:
