--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -77,7 +77,7 @@ jobs:
         if: ${{ matrix.python-version == '3.9' }}
       - name: "Build Package 📦"
         run: |
-          git describe --tags --exact-match > VERSION
+          git describe --tags > VERSION
           python setup.py sdist bdist_wheel
       - uses: actions/upload-artifact@v2
         # Only publish artifacts from Python latest build.
