--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -67,8 +67,8 @@ jobs:
       - name: 'Install Dependencies'
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox
-      
+          python -m pip install tox wheel
+
       - name: 'Run Tests (with coverage)'
         run: tox
         env:
