--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -1,3 +1,9 @@
-sphinx
-sphinxcontrib-napoleon
-pallets-sphinx-themes
+Pallets-Sphinx-Themes==2.0.2
+Sphinx==4.3.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-napoleon==0.7
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
