--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -108,3 +108,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+          files: dist/*
