--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -44,20 +44,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [pypy3, 3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version: [pypy3, '3.10', '3.11', '3.12']
         include:
           - python-version: pypy3
             toxenv: pypy3
-          - python-version: 3.5
-            toxenv: py35
-          - python-version: 3.6
-            toxenv: py36
-          - python-version: 3.7
-            toxenv: py37
-          - python-version: 3.8
-            toxenv: py38
-          - python-version: 3.9
-            toxenv: py39
+          - python-version: '3.10'
+            toxenv: py310
+          - python-version: '3.11'
+            toxenv: py311
+          - python-version: '3.12'
+            toxenv: py312
 
     steps:
       - uses: actions/checkout@v2
@@ -74,14 +70,14 @@ jobs:
         env:
           TOXENV: ${{ matrix.toxenv }}
       - uses: codecov/codecov-action@v2
-        if: ${{ matrix.python-version == '3.9' }}
+        if: ${{ matrix.python-version == '3.12' }}
       - name: "Build Package 📦"
         run: |
           git describe --tags --exact-match > VERSION || true
           python setup.py sdist bdist_wheel
       - uses: actions/upload-artifact@v2
         # Only publish artifacts from Python latest build.
-        if: ${{ matrix.python-version == '3.9' }}
+        if: ${{ matrix.python-version == '3.12' }}
         with:
           name: dist
           path: dist/
