--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,py39,pypy3,lint,docs
+envlist = py310,py311,py312,pypy3,lint,docs
 
 [isort]
 multi_line_output=3
