--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -44,10 +44,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [pypy3, '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
         include:
-          - python-version: pypy3
-            toxenv: pypy3
           - python-version: '3.10'
             toxenv: py310
           - python-version: '3.11'
