--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -44,14 +44,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11']
         include:
           - python-version: '3.10'
             toxenv: py310
           - python-version: '3.11'
             toxenv: py311
-          - python-version: '3.12'
-            toxenv: py312
 
     steps:
       - uses: actions/checkout@v2
@@ -68,14 +66,14 @@ jobs:
         env:
           TOXENV: ${{ matrix.toxenv }}
       - uses: codecov/codecov-action@v2
-        if: ${{ matrix.python-version == '3.12' }}
+        if: ${{ matrix.python-version == '3.11' }}
       - name: "Build Package 📦"
         run: |
           git describe --tags --exact-match > VERSION || true
           python setup.py sdist bdist_wheel
       - uses: actions/upload-artifact@v2
         # Only publish artifacts from Python latest build.
-        if: ${{ matrix.python-version == '3.12' }}
+        if: ${{ matrix.python-version == '3.11' }}
         with:
           name: dist
           path: dist/
