--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-black==21.11b1
-flake8==4.0.1
-flake8-black==0.2.3
-flake8-isort==4.1.1
+black==24.1.1
+flake8==7.0.0
+flake8-black==0.3.6
+flake8-isort==6.1.1
