allow make in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands =
     flake8 flask_ldap3_login flask_ldap3_login_tests setup.py ldap_app.py ldap_app_tls.py
 
 [testenv:docs]
+allowlist_externals=make
 deps =
     -r requirements-docs.txt
 commands =
