--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,py39,pypy3,lint,docs
+envlist = py310,py311,py312,pypy3,lint,docs
 
 [isort]
 multi_line_output=3
@@ -25,6 +25,7 @@ commands =
     flake8 flask_ldap3_login flask_ldap3_login_tests setup.py ldap_app.py ldap_app_tls.py
 
 [testenv:docs]
+allowlist_externals=make
 deps =
     -r requirements-docs.txt
 commands =
