replace setup.py with pyproject.toml (PEP 621)
Since PEP 621 pyproject.toml is the default way to providing metadata.
Until now flask-ldap3-login still used the outdated setup.py and
setup.cfg files.
This commit replaces those files with a pyproject.toml.

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     coverage
     mock
 commands =
-    coverage run setup.py test
+    coverage run
     coverage xml
 
 [testenv:lint]
@@ -22,7 +22,7 @@ skip_install = true
 deps =
     -r requirements-dev.txt
 commands =
-    flake8 flask_ldap3_login flask_ldap3_login_tests setup.py ldap_app.py ldap_app_tls.py
+    flake8 flask_ldap3_login flask_ldap3_login_tests ldap_app.py ldap_app_tls.py
 
 [testenv:docs]
 allowlist_externals=make
