--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: 'Install Dependencies'
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox wheel
+          python -m pip install tox wheel build
 
       - name: 'Run Tests (with coverage)'
         run: tox
@@ -70,7 +70,7 @@ jobs:
       - name: "Build Package 📦"
         run: |
           git describe --tags --exact-match > VERSION || true
-          python setup.py sdist bdist_wheel
+          python -m build
       - uses: actions/upload-artifact@v2
         # Only publish artifacts from Python latest build.
         if: ${{ matrix.python-version == '3.11' }}
